--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@types/uuid": "^10.0.0",
         "@vueuse/components": "^10.9.0",
         "@vueuse/core": "^10.9.0",
+        "dayjs": "^1.11.13",
         "dropzone-vue": "^0.1.11",
         "lodash": "^4.17.21",
         "markdown-it": "^14.1.0",
