feat: Add readme content. Not yet perfect, but it should be usable for a first version.

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=Laravel
+APP_NAME=Wordcraft
 APP_ENV=local
-APP_KEY=base64:7N7UN4iTUxdsoojd9QylD129OGiHGAjUq6g2L4Z0LV4=
+APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://mindwall.local
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -22,8 +22,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=example
-DB_USERNAME=user
+DB_DATABASE=wordcraft
+DB_USERNAME=root
 DB_PASSWORD=
 
 SESSION_DRIVER=database
@@ -62,12 +62,4 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
-VITE_APP_ENV=local
-VITE_API_BASE_URI_PROD=
-VITE_API_BASE_URI_DEV=http://mindwall.local/
-
-SANCTUM_STATEFUL_DOMAINS=mindwall.local
-
-FREEPIK_API_KEY=
-FREEPIK_API_BASE_URL=https://api.freepik.com/v1/
 GEMINI_API_KEY=
