--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
         "@vue/test-utils": "^2.4.6",
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
+        "jsdom": "^25.0.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "sass": "^1.77.2",
         "tailwindcss": "^3.4.13",
         "typescript": "^5.5.4",
         "vite": "^5.0",
+        "vite-tsconfig-paths": "^5.0.1",
         "vitest": "^2.1.2",
         "vue": "^3.4.0",
         "vue-tsc": "^2.1.4"
@@ -38,7 +40,6 @@
         "marked": "^13.0.3",
         "nanoid": "^5.0.7",
         "pinia": "^2.1.7",
-        "primevue": "^4.0.0",
-        "vite-tsconfig-paths": "^5.0.1"
+        "primevue": "^4.0.0"
     }
 }
