--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
+        "@types/alpinejs": "^3.13.11",
         "@types/lodash": "^4.17.4",
         "@types/markdown-it": "^14.1.2",
         "@vitejs/plugin-vue": "^5.0.0",
@@ -33,7 +34,7 @@
         "@types/uuid": "^10.0.0",
         "@vueuse/components": "^10.9.0",
         "@vueuse/core": "^10.9.0",
-        "alpinejs": "^3.14.7",
+        "alpinejs": "^3.14.8",
         "dayjs": "^1.11.13",
         "dropzone-vue": "^0.1.11",
         "lodash": "^4.17.21",
